# footprint

./: Cargo.toml  README.md
fplib/: Cargo.toml
fplib/src/: lib.rs  minisvg.rs
fptool/: Cargo.toml
fptool/src/: fptool.rs
src/: lib.rs  minisvg.rs  test_minisvg.rs
